<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rjzim.mygrocerystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.rjzim.mygrocerystore.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.rjzim.mygrocerystore.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.rjzim.mygrocerystore.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_newProducts"
        android:name="com.rjzim.mygrocerystore.NewProductsFragment"
        android:label="@string/newproduct"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_myOrders"
        android:name="com.rjzim.mygrocerystore.MyOrdersFragment"
        android:label="@string/myorders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_myCarts"
        android:name="com.rjzim.mygrocerystore.MyCartsFragment"
        android:label="@string/mycarts"
        tools:layout="@layout/fragment_my_carts" />
</navigation>